# k-hhc

./: .clangd  .gitignore  CI_CD_SETUP.md  CI_WORKFLOW_CHANGES.md  CMakeLists.txt  README.md
.github/: WORKFLOWS_QUICK_REFERENCE.md  dependabot.yml
.github/workflows/: README.md  ci.yml  coverage.yml  docs.yml  fuzzing.yml  python.yml  release.yml
benchmarks/: CMakeLists.txt  bench_utils.hpp  benchmark_hcc.cpp  benchmark_hhc.cpp  decode32_bench.cpp  decode64_bench.cpp  encode32_bench.cpp  encode64_bench.cpp  extras_bench.cpp  main.cpp  validate_bench.cpp
cmake/: hhc-cpp.pc.in  k-hhc.pc.in  run_coverage.cmake
examples/: CMakeLists.txt  assert_example.cpp  decode_example.cpp  encode_example.cpp
fuzz/: CMakeLists.txt  hhc_fuzz_32.cpp  hhc_fuzz_64.cpp  hhc_fuzz_decode32.cpp  hhc_fuzz_decode64.cpp
hcc-cpp/: hcc.hpp
hhc-cpp/: hcc_constants.hpp  hhc.hpp
k-hhc/: hhc_assert.hpp
python/: CMakeLists.txt  Makefile  README.md  hhc_python.cpp  k-hhc  pyproject.toml  setup.cfg  setup.py
python/examples/: decode_example.py  encode_example.py
tests/: CMakeLists.txt  assert_tests.cpp  bounds_tests.cpp  constants_tests.cpp  decode32_tests.cpp  decode64_tests.cpp  encode32_tests.cpp  encode64_tests.cpp  test_hcc.cpp  test_hhc.cpp  unpad_tests.cpp  validate_tests.cpp
